--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: caps/sp2a-spe-events:latest
+        image: swaggerapi/swagger-ui:latest
         ports:
         - containerPort: 8080
